--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -179,4 +182,180 @@
     #mobile-menu.is-active .bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);
     }
+}
+/* home section */
+body{
+    background: #000000; 
+    background: linear-gradient(to right, #434343, #000000); 
+}
+.home__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background: #000000; 
+    background: linear-gradient(to right, #434343, #000000);  */
+    padding: 100px 0px;
+}
+
+.home__container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 40px;
+    text-align: center;
+    
+}
+
+.home__heading{
+    font-family: 'Limelight', cursive;
+    font-size: 6rem;
+    color: white;
+    font-weight: 800;
+    margin: 24px auto;
+}
+.home__heading span{
+    background: #ee0979;
+    background: -webkit-linear-gradient(to right, #ff6a00, #ee0979); 
+    background: linear-gradient(to right, #ff6a00, #ee0979);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
+    
+
+}
+
+.home__desc{
+    font-size: 3rem;
+    font-weight: 900;
+    font-family: 'Open Sans', sans-serif;
+    margin: 24px auto;
+    background: #ff00cc; 
+    background: -webkit-linear-gradient(to right, #333399, #ff00cc); 
+    background: linear-gradient(to right, #333399, #ff00cc);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
+
+}
+
+.explore__btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 24px auto;
+}
+
+#explore__link{
+    text-decoration: none;
+    color: white;
+    font-size: 3rem;
+    font-family: 'Open Sans', sans-serif;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);
+}
+
+#explore__link:hover{
+    background: #3A1C71;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+
+@media screen and (max-width:700px){
+    .home__heading{
+        font-size: 4rem;
+    }
+    .home__desc{
+        font-size: 2rem;
+    }
+}
+
+
+/* about section */
+
+.about__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    /* padding: 100px 0px; */
+}
+
+.about__container{
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 40px;
+    text-align: center;
+}
+
+.about__section__image{
+    height: 350px;
+    width: 350px;
+    background: #ff00cc; 
+    background: -webkit-linear-gradient(to right, #333399, #ff00cc);
+    background: linear-gradient(to right, #333399, #ff00cc); 
+
+}
+.about__section__content{
+    height: 350px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px ;
+    text-align: left;
+}
+.about__heading1{
+    font-size: 2rem;
+    background: #CB356B;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #BD3F32, #CB356B);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #BD3F32, #CB356B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
+    margin-bottom: 3px;
+
+}
+
+.about__heading2{
+    font-size: 3rem;
+    color: rgb(180, 61, 180);
+    margin-bottom: 3px;
+
+}
+
+.about__para{
+    font-size: 2rem;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 3px;
+
+}
+
+.call__btn{
+    display: block;
+    margin: 20px 0px;
+}
+
+#call__link{
+    text-decoration: none;
+    color: white;
+    font-size: 2rem;
+    padding: 5px 20px;
+    border-radius: 5px;
+    background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);
 }
