--- a/style.css
+++ b/style.css
@@ -307,6 +307,10 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     background: #ff00cc; 
     background: -webkit-linear-gradient(to right, #333399, #ff00cc);
     background: linear-gradient(to right, #333399, #ff00cc); 
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 .about__section__content{
@@ -316,6 +320,7 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     flex-direction: column;
     padding: 20px ;
     text-align: left;
+    margin: 30px;
 }
 .about__heading1{
     font-size: 2rem;
