signup section completed

--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     color: white;
     border-radius: 10px;
     text-align: center;
+    transition: all .5s ease;
 }
 
 .service__card h2{
@@ -486,4 +487,19 @@ background: linear-gradient(to bottom, #db36a4, #f7ff00); /* W3C, IE 10+/ Edge, 
     background: -webkit-linear-gradient(to bottom, #2c3e50, #2980b9);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #2c3e50, #2980b9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+
+.service__card:hover{
+    transform: scale(1.1);
+}
+
+.fa-users{
+    font-size: 14rem;
+    color: white;
+}
+
+@media screen and (max-width: 700){
+    .fa-users{
+        font-size: 10rem;
+    }
 }
