--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
+    position: fixed;
     top: 0px;
     z-index: 1000;
+    width: 100%;
 }
 
 .navbar__container{
@@ -303,8 +304,8 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
 
 .about__section__image{
     height: auto;
-    min-height: 500px;
-    width: 500px;
+    /* min-height: 500px; */
+    /* width: 500px; */
     background: #ff00cc; 
     background: -webkit-linear-gradient(to right, #333399, #ff00cc);
     background: linear-gradient(to right, #333399, #ff00cc); 
@@ -312,6 +313,10 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 400px;
+    max-width: 400px;
+    min-height: 350px;
+    min-width: 350px;
 
 }
 
@@ -321,14 +326,16 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
 }
 .about__section__content{
     height: auto;
-    min-height: 350px;
-    width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 20px ;
     text-align: left;
     /* margin: 30px; */
+    max-height: 400px;
+    max-width: 400px;
+    min-height: 350px;
+    min-width: 350px;
 }
 .about__heading1{
     font-size: 2rem;
@@ -381,7 +388,7 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     .about__section__image{
         min-height: 350px;
     }
-    .fa-dumbbell{
+.fa-users , .fa-dumbbell{
         font-size: 10rem;
 
     }
@@ -394,8 +401,11 @@ background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+
     .fa-dumbbell{
         font-size: 8rem;
     }
+    .fa-users{
+        font-size: 8rem ;
+    }
 }
-
+/* service--section */
 .service__section{
     display: flex;
     justify-content: space-around;
@@ -493,13 +503,131 @@ background: linear-gradient(to bottom, #2c3e50, #2980b9); /* W3C, IE 10+/ Edge, 
     transform: scale(1.1);
 }
 
-.fa-users{
+/* Register section */
+
+
+.sign__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    /* padding: 100px 0px; */
+}
+
+.sign__container{
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 40px;
+    text-align: center;
+    
+}
+
+.sign__section__image{
+    height: auto;
+    /* min-height: 500px; */
+    /* width: 500px; */
+    background: #ff00cc; 
+    background: -webkit-linear-gradient(to right, #333399, #ff00cc);
+    background: linear-gradient(to right, #333399, #ff00cc); 
+    /* margin: 30px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 400px;
+    max-width: 400px;
+    min-height: 350px;
+    min-width: 350px;
+
+}
+
+.fa-users
+{
     font-size: 14rem;
     color: white;
 }
+.sign__section__content{
+    height: auto;
+    min-height: 350px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px ;
+    text-align: left;
+    /* margin: 30px; */
+    max-height: 400px;
+    max-width: 400px;
+    min-height: 350px;
+    min-width: 350px;
+}
+.sign__heading1{
+    font-size: 2rem;
+    background: #CB356B;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #BD3F32, #CB356B);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #BD3F32, #CB356B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -mo-text-fill-color: transparent;
+    /* margin-bottom: 6px; */
 
-@media screen and (max-width: 700){
-    .fa-users{
+}
+
+.sign__heading2{
+    font-size: 3rem;
+    color: rgb(180, 61, 180);
+    /* margin-bottom: 6px; */
+
+}
+
+.sign__para{
+    font-size: 2rem;
+    font-weight: 600;
+    color: white;
+    /* margin-bottom: 6px; */
+
+}
+
+.register__btn{
+    display: block;
+    margin: 20px 0px;
+}
+
+#register__link{
+    text-decoration: none;
+    color: white;
+    font-size: 2rem;
+    padding: 5px 20px;
+    border-radius: 5px;
+    background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);
+}
+
+@media screen and (max-width: 700px){
+    #register__link{
+        font-size: 1.2rem;
+        padding: 5px 10px ;
+    }
+    .register__section__image{
+        min-height: 350px;
+    }
+.fa-users{
         font-size: 10rem;
+
     }
 }
+@media screen and (max-width: 400px){
+    .sign__section__image{
+        min-height: 250px;
+        min-width: 250px;
+    }
+    .fa-users{
+        font-size: 8rem ;
+    }
+}
+
